Add MDX password protection system with lock/unlock functionality

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -4,6 +4,8 @@ description: "Complete examples of all MDX content styles and formatting"
 icon: "FileText"
 prevButtonText: "Back"
 nextButtonText: "Forward"
+locked: true
+password: "password"
 ---
 
 # MDX Content Styling Examples
