--- a/content/1.mdx
+++ b/content/1.mdx
@@ -1,12 +1,4 @@
----
-title: "MDX Styling Examples"
-description: "Complete examples of all MDX content styles and formatting"
-icon: "FileText"
-prevButtonText: "Back"
-nextButtonText: "Forward"
-locked: true
-password: "password"
----
+вопрос: 
 
 # MDX Content Styling Examples
 
