Fix hash navigation and add debug logging for TOC processing

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -1,20 +1,35 @@
-вопрос: 
+---
+title: "MDX Styling Examples"
+description: "Complete examples of all MDX content styles and formatting"
+slug: "demo"
+icon: "FileText"
+prevButtonText: "Back"
+nextButtonText: "Forward"
+locked: true
+---
 
 # MDX Content Styling Examples
+slug: "mdx-content-styling-examples"
 
 This page demonstrates all available styles and formatting for MDX content, including syntax-highlighted code.
 
 ## Headings of All Levels
+slug: "headings-first"
 
 ### Third Level Heading
+slug: "third-level-heading"
 
 #### Fourth Level Heading
+slug: "fourth-level-heading"
 
 ##### Fifth Level Heading
+slug: "fifth-level-heading"
 
 ###### Sixth Level Heading
+slug: "sixth-level-heading"
 
 ## Text Formatting
+slug: "text-formatting"
 
 This is **bold text**, this is <u>underlined text</u>, and this is *italic*. You can also use ***bold italic***, **<u>bold underlined</u>** and ***<u>bold underlined italic</u>***.
 
