--- a/content/2.mdx
+++ b/content/2.mdx
@@ -5,7 +5,7 @@ icon: "FileText"
 prevButtonText: "Back"
 nextButtonText: "Forward"
 locked: true
-password: "password1"
+slug: "group-1-section-a"
 ---
 
 # Group 1 - Section A
