--- a/content/4.mdx
+++ b/content/4.mdx
@@ -5,7 +5,7 @@ icon: "FileText"
 prevButtonText: "Back"
 nextButtonText: "Forward"
 locked: true
-password: "password2"
+slug: "group-2-section-d"
 ---
 
 # Group 2 - Section D
