feat: Add custom MDX components for admonitions, task lists, and interactive diagrams; enhance README and content documentation

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -335,12 +335,60 @@ graph TB
     E --> G
 ```
 
+## Admonitions (Информационные блоки)
+
+<admonition type="info" title="Информация">
+Это информационный блок с синим цветом. Используется для предоставления дополнительной информации.
+</admonition>
+
+<admonition type="success" title="Успех">
+Это блок успеха с зеленым цветом. Используется для отображения положительных результатов или советов.
+</admonition>
+
+<admonition type="warning" title="Предупреждение">
+Это блок предупреждения с желтым цветом. Используется для привлечения внимания к важным моментам.
+</admonition>
+
+<admonition type="danger" title="Опасно">
+Это блок опасности с красным цветом. Используется для предупреждения о критических моментах или запретах.
+</admonition>
+
+<admonition type="info">
+Блок без заголовка - просто информационное сообщение.
+</admonition>
+
 ## HTML Elements
 
 <div style="background: linear-gradient(45deg, #ff6b6b, #4ecdc4); padding: 20px; border-radius: 10px; color: white; text-align: center; margin-bottom: 20px;">
   <h3>Custom HTML Block</h3>
   <p>This is an example of using HTML in MDX</p>
 </div>
+
+### Setup Instructions
+
+<admonition type="info" title="Important">
+Before starting work, make sure you have Bun installed and all dependencies.
+</admonition>
+
+<admonition type="success" title="Ready">
+The project has been successfully configured and is ready to work!
+</admonition>
+
+### Warnings
+
+<admonition type="warning" title="Attention">
+Do not delete files from the `content/` folder without prior backup.
+</admonition>
+
+<admonition type="danger" title="Caution">
+Incorrect configuration may lead to data loss.
+</admonition>
+
+### Block without title
+
+<admonition type="info">
+This block demonstrates the ability to create informational messages without a title. Useful for additional notes or explanations.
+</admonition>
 
 ## Conclusion
 
