feat: Add carousel component implementation and documentation to README and content files; enhance MDXRenderer with new carousel-related components

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -456,12 +456,38 @@ This block demonstrates the ability to create informational messages without a t
 
 ### Separator Components
 
-<separatorui> </separatorui>
+<separatorui></separatorui>
 
 ### Switch Component
 
-<switchui> </switchui>
+<switchui></switchui>
 
+### Carousel Components
+
+<carouselui className="w-full max-w-2xl mx-auto">
+  <carouselcontentui>
+    <carouselitemui>
+      <cardui>
+        <h4>Slide 1</h4>
+        <p>This is the first slide of the carousel.</p>
+      </cardui>
+    </carouselitemui>
+    <carouselitemui>
+      <cardui>
+        <h4>Slide 2</h4>
+        <p>This is the second slide of the carousel.</p>
+      </cardui>
+    </carouselitemui>
+    <carouselitemui>
+      <cardui>
+        <h4>Slide 3</h4>
+        <p>This is the third slide of the carousel.</p>
+      </cardui>
+    </carouselitemui>
+  </carouselcontentui>
+  <carouselpreviousui></carouselpreviousui>
+  <carouselnextui></carouselnextui>
+</carouselui>
 
 ### Toggle Components
 
