feat: improve UI styling and add language switcher
- Fix blockquote styling: reduce heading padding, make author bold not italic
- Add language switcher to right sidebar with minimal variant
- Standardize button styles for theme and language switchers
- Fix CSS variables syntax for Tailwind CSS 4 compatibility
- Add comprehensive localization for UI texts
- Fix React hydration warnings and accessibility issues
- Improve sidebar hover effects and color consistency
- Update tablet header icon to use theme colors

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -3,6 +3,14 @@
     "search": "Suchen",
     "searchPlaceholder": "Tippen zum Suchen...",
     "loading": "Laden...",
+    "loadingApplication": "Anwendung wird geladen",
+    "takingToMainPage": "Weiterleitung zur Hauptseite",
+    "indexingContent": "Inhalte werden indiziert...",
+    "preparingSearch": "Suche wird vorbereitet...",
+    "navigation": "Navigation",
+    "forward": "Vorwärts",
+    "sectionNavigation": "Abschnittsnavigation",
+    "noHeadings": "Keine Überschriften",
     "cancel": "Abbrechen",
     "close": "Schließen",
     "open": "Öffnen",
