--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,13 @@
     "search": "Search",
     "searchPlaceholder": "Type to search...",
     "loading": "Loading...",
+    "loadingApplication": "Loading Application",
+    "takingToMainPage": "Taking you to the main page",
+    "indexingContent": "Indexing content...",
+    "preparingSearch": "Preparing search...",
+    "navigation": "Navigation",
+    "forward": "Forward",
+    "sectionNavigation": "Section navigation",
     "cancel": "Cancel",
     "close": "Close",
     "open": "Open",
