--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,6 +3,14 @@
     "search": "Buscar",
     "searchPlaceholder": "Escriba para buscar...",
     "loading": "Cargando...",
+    "loadingApplication": "Cargando aplicación",
+    "takingToMainPage": "Redirigiendo a la página principal",
+    "indexingContent": "Indexando contenido...",
+    "preparingSearch": "Preparando búsqueda...",
+    "navigation": "Navegación",
+    "forward": "Adelante",
+    "sectionNavigation": "Navegación de secciones",
+    "noHeadings": "Sin encabezados",
     "cancel": "Cancelar",
     "close": "Cerrar",
     "open": "Abrir",
