--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,6 +3,14 @@
     "search": "Rechercher",
     "searchPlaceholder": "Tapez pour rechercher...",
     "loading": "Chargement...",
+    "loadingApplication": "Chargement de l'application",
+    "takingToMainPage": "Redirection vers la page principale",
+    "indexingContent": "Indexation du contenu...",
+    "preparingSearch": "Préparation de la recherche...",
+    "navigation": "Navigation",
+    "forward": "Suivant",
+    "sectionNavigation": "Navigation des sections",
+    "noHeadings": "Aucun titre",
     "cancel": "Annuler",
     "close": "Fermer",
     "open": "Ouvrir",
